--- a/backend/package.json
+++ b/backend/package.json
@@ -5,17 +5,34 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "start:secure": "node server-secure.js",
+    "dev": "nodemon server.js",
+    "dev:secure": "nodemon server-secure.js",
+    "migrate-passwords": "node scripts/migrate-passwords.js",
+    "test:security": "node scripts/security-test.js"
   },
   "dependencies": {
+    "bcryptjs": "^3.0.2",
+    "connect-mongo": "^5.1.0",
+    "cors": "^2.8.5",
+    "dotenv": "^17.2.3",
     "express": "^4.18.2",
-    "cors": "^2.8.5"
+    "express-rate-limit": "^8.1.0",
+    "express-session": "^1.18.2",
+    "express-validator": "^7.2.1",
+    "helmet": "^8.1.0",
+    "jsonwebtoken": "^9.0.2"
   },
   "devDependencies": {
+    "axios": "^1.12.2",
     "nodemon": "^3.0.1"
   },
-  "keywords": ["solar", "plant", "management", "file-system"],
+  "keywords": [
+    "solar",
+    "plant",
+    "management",
+    "file-system"
+  ],
   "author": "Solar Plant System",
   "license": "MIT"
 }
-
